Better extraction, URI handling, PDF support